--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -5,23 +5,23 @@
 	<key>debug</key>
 	<dict>
 		<key>levelEditorEnabled</key>
-		<false/>
+		<true/>
 	</dict>
 	<key>common</key>
 	<dict>
 		<key>starWait</key>
-		<integer>10</integer>
+		<integer>0</integer>
 		<key>objectInitialSpeed</key>
 		<integer>18</integer>
 		<key>gameSpeedIncreaseUnit</key>
 		<real>0.5</real>
 		<key>gameSpeedMax</key>
 		<integer>2</integer>
-		<key>scoreUnit</key>
-		<real>0.15</real>
+		<key>distanceUnit</key>
+		<real>0.015</real>
 		<key>scrollSpeed</key>
 		<real>-0.5</real>
-		<key>distanceUnit</key>
+		<key>dropRate</key>
 		<real>0.02</real>
 	</dict>
 	<key>board</key>
