--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -23,6 +23,8 @@
 		<real>-0.3</real>
 		<key>dropRate</key>
 		<real>0.015</real>
+		<key>levelTransitionDelay</key>
+		<integer>2</integer>
 	</dict>
 	<key>board</key>
 	<dict>
