--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -28,9 +28,9 @@
 		<key>objectInitialSpeed</key>
 		<integer>17</integer>
 		<key>gameSpeedIncreaseUnit</key>
-		<real>0.4</real>
+		<real>0.2</real>
 		<key>gameSpeedMax</key>
-		<real>3.5</real>
+		<integer>3</integer>
 		<key>distanceUnit</key>
 		<real>0.015</real>
 		<key>scrollSpeed</key>
