fix a bug on achievement view on main menu. ready for BETA

--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -5,9 +5,9 @@
 	<key>debug</key>
 	<dict>
 		<key>levelEditorEnabled</key>
-		<true/>
+		<false/>
 		<key>forceReloadUserData</key>
-		<true/>
+		<false/>
 		<key>hasHeadStart</key>
 		<false/>
 		<key>physicsDebug</key>
