--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -5,7 +5,7 @@
 	<key>debug</key>
 	<dict>
 		<key>levelEditorEnabled</key>
-		<false/>
+		<true/>
 		<key>forceReloadUserData</key>
 		<false/>
 		<key>hasHeadStart</key>
