Change item get animation [iphone5] Fix achievement view and skill button position bug [bug] Fix reborn bug [ui] Move score, star, pause position in game ui

--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -5,7 +5,7 @@
 	<key>debug</key>
 	<dict>
 		<key>levelEditorEnabled</key>
-		<true/>
+		<false/>
 		<key>forceReloadUserData</key>
 		<false/>
 		<key>hasHeadStart</key>
