--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -9,7 +9,7 @@
 		<key>gameSpeedEditorEnabled</key>
 		<false/>
 		<key>forceReloadUserData</key>
-		<false/>
+		<true/>
 		<key>hasHeadStart</key>
 		<false/>
 		<key>physicsDebug</key>
