--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>debug</key>
 	<dict>
+		<key>showMeTheMoneyEnabled</key>
+		<true/>
 		<key>levelEditorEnabled</key>
 		<false/>
 		<key>gameSpeedEditorEnabled</key>
