--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -7,7 +7,7 @@
 		<key>levelEditorEnabled</key>
 		<false/>
 		<key>gameSpeedEditorEnabled</key>
-		<false/>
+		<true/>
 		<key>forceReloadUserData</key>
 		<true/>
 		<key>hasHeadStart</key>
