--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -21,6 +21,8 @@
 	<dict>
 		<key>magicFrequence</key>
 		<real>0.3</real>
+		<key>starMultiplier</key>
+		<integer>2</integer>
 		<key>velocityCalibrationRatio</key>
 		<real>0.7</real>
 		<key>minCalibrationVelocity</key>
