[iPhone3GS] Resolve iphone 3gs image bug [Background] Remove old background controller and replace with new system

--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -5,7 +5,7 @@
 	<key>debug</key>
 	<dict>
 		<key>showMeTheMoneyEnabled</key>
-		<false/>
+		<true/>
 		<key>levelEditorEnabled</key>
 		<true/>
 		<key>gameSpeedEditorEnabled</key>
