--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -19,6 +19,8 @@
 	</dict>
 	<key>common</key>
 	<dict>
+		<key>iceBreakNum</key>
+		<integer>8</integer>
 		<key>magicFrequence</key>
 		<real>0.3</real>
 		<key>starMultiplier</key>
