--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -7,9 +7,9 @@
 		<key>showMeTheMoneyEnabled</key>
 		<true/>
 		<key>levelEditorEnabled</key>
-		<false/>
+		<true/>
 		<key>gameSpeedEditorEnabled</key>
-		<false/>
+		<true/>
 		<key>forceReloadUserData</key>
 		<true/>
 		<key>hasHeadStart</key>
