--- a/DumplingJump/DU/Resources/plists/worldData.plist
+++ b/DumplingJump/DU/Resources/plists/worldData.plist
@@ -42,7 +42,7 @@
 		<key>objectInitialSpeedIncreaseUnit</key>
 		<real>0.2</real>
 		<key>objectInitialSpeedIncreaseMax</key>
-		<integer>1</integer>
+		<real>1.5</real>
 		<key>scrollSpeed</key>
 		<real>-0.3</real>
 		<key>scrollSpeedIncreaseUnit</key>
